@@ -2,7 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.23 2004/11/12 20:37:49 port001 Exp $
+# $Id: ChangeLog,v 1.24 2004/11/14 23:00:31 port001 Exp $
+
+14 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * offset for the error report list
+ * Print to the top of the error report log
 
 12 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Form fixes
